--- a/voting_deployment.yml
+++ b/voting_deployment.yml
@@ -34,7 +34,7 @@ metadata:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: db_volume
+  name: db-volume
   namespace: infra-cloud-oc
 spec:
   accessModes:
@@ -45,7 +45,7 @@ spec:
   storageClassName: standard-rwo
 ---
 #voting_app
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
     name: vote
@@ -62,7 +62,7 @@ spec:
         spec:
             containers:
                 - name: vote
-                  image: owaincharlon/voting_app:v1
+                  image: owaincharlon/owain-infra-cloud-voting_app:v1_prod
                   ports:
                       - containerPort: 80
                   imagePullPolicy: Always
@@ -82,7 +82,7 @@ spec:
         app: vote
     type: LoadBalancer
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
     name: result
@@ -99,7 +99,7 @@ spec:
         spec:
             containers:
                 - name: result
-                  image: owaincharlon/result_app:v1
+                  image: owaincharlon/owain-infra-cloud-result_app:v1_prod
                   ports:
                       - containerPort: 4000
                   imagePullPolicy: Always
@@ -119,7 +119,7 @@ spec:
         app: result
     type: LoadBalancer
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
     name: worker
@@ -136,15 +136,16 @@ spec:
         spec:
             containers:
                 - name: worker
-                  image: owaincharlon/worker:v1
+                  image: owaincharlon/owain-infra-cloud-worker:v1_prod
                   # ports:
                   #     - containerPort: 4000
                   # imagePullPolicy: Always
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
     name: redis
+    namespace: infra-cloud-oc
 spec:
     replicas: 1
     selector:
@@ -161,9 +162,8 @@ spec:
                   # ports:
                   #     - containerPort: 4000
                   # imagePullPolicy: Always
-
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
     name: db
@@ -173,10 +173,10 @@ spec:
     selector:
         matchLabels:
             app: db
-    volumes:
-    - name: pvc-db
-      persistentVolumeClaim:
-      claimName: db_volume
+    # volumes:
+    # - name: pvc-db
+    #   persistentVolumeClaim:
+    #   claimName: db-volume
     template:
         metadata:
             labels:
@@ -193,6 +193,21 @@ spec:
                       value: postgres
                     - name: POSTGRES_PASSWORD
                       value: postgres
-                  volumeMounts:
-                  - mountPath: /var/lib/postgresql/data
-                    name: pvc_db
+                #   volumeMounts:
+                #   - mountPath: /var/lib/postgresql/data
+                #     name: pvc-db
+                  ports:
+                    - containerPort: 5432
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: db
+  namespace: infra-cloud-oc
+spec:
+  selector:
+    app.kubernetes.io/name: db
+  ports:
+    - protocol: TCP
+      port: 5432
+      targetPort: 5432
